--- a/odiga/src/main/webapp/WEB-INF/web.xml
+++ b/odiga/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 	<servlet>
-		<servlet-name>vision</servlet-name>
+		<servlet-name>odiga_mav</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
@@ -20,7 +20,7 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>vision</servlet-name>
-		<url-pattern>/</url-pattern>
+		<servlet-name>odiga_mav</servlet-name>
+		<url-pattern>*.do</url-pattern>
 	</servlet-mapping>
 </web-app>
